Fix Firebase deployment Bug
Accidentally set up the public directory wrong this push fixes it

--- a/firebase.json
+++ b/firebase.json
@@ -7,7 +7,7 @@
     "indexes": "firestore.indexes.json"
   },
   "hosting": {
-    "public": "self-documenting-site",
+    "public": "dist/self-documenting-site",
     "ignore": [
       "firebase.json",
       "**/.*",
