--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "dialog-polyfill": "^0.5.6",
     "firebase": "^9.6.10",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
